# rusty-matrix

./: .gitignore  AGENTS.md  BUILD_INFO.md  Cargo.toml  INDEX.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  build.rs
shaders/: shader.wgsl
src/: events.rs  font_atlas.rs  gui.rs  main.rs  rain.rs  renderer.rs
