[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8"
naga = { version = "0.19", features = ["wgsl-in"] }
pollster = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "matrix"
path = "src/main.rs"
